# bio_sfm_designer

./: .gitignore  CITATION.cff  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
configs/: example_enzyme_stability.yaml  m6c_w3_chai1_3pc8_smoke_contract.json  m6d_candidate_complex_targets.json  m6d_followup_complex_targets.json  m6d_redesign_complex_targets.json  m6d_w2_expanded_discovery_complex_targets.json  m6d_w2_expanded_discovery_seed_rcsb_ids.json  m6d_w2_expanded_next_branch_targets.json  m6d_w2_fresh_discovery_complex_targets.json  m6d_w2_fresh_discovery_seed_rcsb_ids.json  m6d_w2_fresh_discovery_unique_source_pilot_targets.json  m6d_w2_historical_target_registry.json  m6d_w2_next_branch_candidate_rules.json  m6d_w2_target_family_redesign_v10_candidate_rules.json  m6d_w2_target_family_redesign_v10_discovery_targets.json  m6d_w2_target_family_redesign_v10_representative_targets.json  m6d_w2_target_family_redesign_v10_seed_rcsb_ids.json  m6d_w2_target_family_redesign_v11_candidate_rules.json  m6d_w2_target_family_redesign_v11_discovery_targets.json  m6d_w2_target_family_redesign_v11_new_discovery_targets.json  m6d_w2_target_family_redesign_v11_new_only_candidates.json  m6d_w2_target_family_redesign_v11_new_representative_targets.json  m6d_w2_target_family_redesign_v11_representative_targets.json  m6d_w2_target_family_redesign_v11_seed_rcsb_ids.json  m6d_w2_target_family_redesign_v1_candidate_rules.json  m6d_w2_target_family_redesign_v1_discovery_targets.json  m6d_w2_target_family_redesign_v1_rcsb_discovery_targets.json  m6d_w2_target_family_redesign_v1_rcsb_representative_next_branch_targets.json  m6d_w2_target_family_redesign_v1_rcsb_representative_targets.json  m6d_w2_target_family_redesign_v1_rcsb_seed_expansion.json  m6d_w2_target_family_redesign_v1_seed_rcsb_ids.json  m6d_w2_target_family_redesign_v1_targets.json  m6d_w2_target_family_redesign_v2_candidate_rules.json  m6d_w2_target_family_redesign_v2_rcsb_discovery_targets.json  m6d_w2_target_family_redesign_v2_rcsb_representative_targets.json  m6d_w2_target_family_redesign_v2_rcsb_seed_expansion.json  m6d_w2_target_family_redesign_v3_candidate_rules.json  m6d_w2_target_family_redesign_v3_discovery_targets.json  m6d_w2_target_family_redesign_v3_rcsb_seed_expansion.json  m6d_w2_target_family_redesign_v3_representative_targets.json  (+52 more)
docs/: ARCHITECTURE.md  BACKGROUND.md  CODEX_GOAL_MODE.md  HPC.md  LLM_ORCHESTRATION.md  LLM_ORCHESTRATION_LIVE_SMOKE_2026_07_23.md  M6C_RUNBOOK.md  M6D_CANDIDATE_PANEL.md  M6D_GOAL_MODE_ANCHOR.md  M6D_W2B_CERTIFICATION_APPROVAL.md  M6D_W2B_CERTIFICATION_COMPLETION.md  M6D_W2B_FIT_APPROVAL.md  M6D_W2B_FIT_COMPLETION.md  M6D_W2B_TARGET_ADAPTIVE_PROTOCOL.md  M6D_W2B_TARGET_MSA_APPROVAL.md  M6D_W2B_TARGET_MSA_COMPLETION.md  M6D_W2C_FIT_LEARN_APPROVAL.md  M6D_W2C_ONE_SHOT_PROTOCOL.md  M6D_W2C_TARGET_MSA_APPROVAL.md  M6D_W2C_THRESHOLD_LEARNING_COMPLETION.md  M6D_W3B_AF2_RECOVERY_APPROVAL.md  M6D_W3B_DISAGREEMENT_GATE_PROTOCOL.md  M6D_W3B_FIT_APPROVAL.md  M6D_W3B_FIT_COMPLETION.md  M6D_W3B_TARGET_MSA_APPROVAL.md  M6D_W3B_TARGET_MSA_COMPLETION.md  M6D_W3C_A_TARGET_LOCK.md  M6D_W3C_B1_TARGET_MSA_APPROVAL.md  M6D_W3C_VALIDITY_FIRST_PROTOCOL.md  M6D_W3_MECHANISM_PANEL.md  M6D_W3_MECHANISM_PANEL_COMPLETION.md  PROJECT_ROADMAP.md  RELATED_WORK.md  RESULTS.md  STATISTICAL_VALIDITY_RESET_2026-07-10.md  W6_V2_FROZEN_SHADOW_PANEL.md  W6_V2_LIVE_SHADOW_PANEL_2026_07_23.md  W6_V3_HYPOTHESIS_ONLY.md
hpc/: README.md  aggregate_chai1_batch_records.py  convert_chai1_complex_output.py  (+52 more)
(+428 files in other folders)
